Always pass displayName without matrix id to avatar name

BUG: 456638