imports/NeoChat/Component/Timeline/StateDelegate.qml
@@ -73,7 +73,7 @@ Control {
             Layout.preferredHeight: Kirigami.Units.iconSizes.small
             Layout.alignment: Qt.AlignTop
 
-            name: author.displayName
+            name: model.displayNameForInitials
             source: author.avatarMediaId ? ("image://mxc/" + author.avatarMediaId) : ""
             color: author.color
 
